# Labs_OC

Code_labs/: lab_oc1.c
Code_labs/KP/: CMakeLists.txt  exeption.h  main_kp.cpp  test1.py  worker.cpp  worker.h
Code_labs/lab_6/: CMakeLists.txt  Makefile  function_server.cpp  function_server.h  my_server.cpp  my_slave.cpp  topology.cpp  topology.h
otchet/: Lab02_otchet.docx
